Remove extra word
Signed-off-by: Mike Fiedler <miketheman@gmail.com>

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <footer class="footer">
       Coded with <a href="https://github.com/miketheman" target="_blank">❤️ in NYC</a>. Data
-      from the <a href="https://data.cdc.gov/">Data.CDC.gov</a>
+      from <a href="https://data.cdc.gov/">Data.CDC.gov</a>
     </footer>
   </body>
 </html>
